Refactor blocking_visualization to html and reorganize files

--- a/scripts/state_initialization.ipynb
+++ b/scripts/state_initialization.ipynb
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "851cca61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def leftInletRightOutlet(nx:int=32, ny:int=32, nz:int=32, leftVel:float=0.05, folder=\"left_inlet_right_outlet\"):\n",
+    "def leftInletRightOutlet(nx:int=32, ny:int=32, nz:int=32, leftVel:float=0.05, folder=\"../data/left_inlet_right_outlet\"):\n",
     "    folder += f\"_{nx}_{ny}_{nz}_init_state\"\n",
     "    if not os.path.exists(folder):\n",
     "        os.makedirs(folder)\n",
