--- a/visualization/dump_visualization.ipynb
+++ b/visualization/dump_visualization.ipynb
@@ -42,7 +42,7 @@
     "steps = [200, 400, 600]\n",
     "vmin, vmax = 0, 0.05\n",
     "Nx, Ny, Nz = 288, 272, 280\n",
-    "outputFolder = Path(f\"left_inlet_right_outlet_cube_obs_{Nx}_{Ny}_{Nz}_output\")\n",
+    "outputFolder = Path(f\"../data/left_inlet_right_outlet_cube_obs_{Nx}_{Ny}_{Nz}_output\")\n",
     "\n",
     "fig, axes = plt.subplots(1, len(steps), \n",
     "                         figsize=(8, 2.5),\n",
